add doctype html5

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -18,14 +18,10 @@
         </label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
-          <button>
-            Add
-          </button>
+          <button>Add</button>
         </div>
       </p>
-      <h3>
-        Todo
-      </h3>
+      <h3>Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -33,9 +29,7 @@
             Pay Bills
           </label>
           <input type="text" class="task">
-          <button class="edit">
-            Edit
-          </button>
+          <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
@@ -46,17 +40,13 @@
             Go Shopping
           </label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">
-            Save
-          </button>
+          <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>
-        Completed
-      </h3>
+      <h3>Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
@@ -64,9 +54,7 @@
             See the Doctor
           </label>
           <input type="text" class="task">
-          <button class="edit">
-            Edit
-          </button>
+          <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
