--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
@@ -17,7 +17,7 @@
           Add Item
         </label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -34,7 +34,7 @@
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">
             Go Shopping
