--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="details">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="add-element">
         <label for="new-task">
           Add Item
         </label>
@@ -22,7 +22,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="in-complete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">
