--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="details">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
