refactor(extended-2): add some bem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="details">
-      <img src="./eisenhower-matrix.jpg">
+      <img alt="Eisenhower Matrix" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
@@ -17,7 +17,7 @@
           Add Item
         </label>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
+          <input id="new-task" class="task-row-wrapper__task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -31,7 +31,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img alt="Remove" src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
@@ -42,7 +42,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img alt="Remove" src="./remove.svg">
           </button>
         </li>
       </ul>
@@ -56,7 +56,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img alt="Remove" src="./remove.svg">
           </button>
         </li>
       </ul>
